--- a/bsdnow/CARPTutorial.latex
+++ b/bsdnow/CARPTutorial.latex
@@ -51,9 +51,19 @@ tutorial. A good idea is to start the range at 100, like so:
 \end{description}
 
 
-\section{Getting Started}
+\section{Basic \carp}
 The first thing we need to do is change the configuration of our internal network. When you set up carp, the first thing you have to remember is that you set the ip address of the \acc{real} interface to be the private ip address of each router, so for example we set the Cable router to be 192.168.1.20:
-\cmdr{echo "inet 172.16.1.1 255.255.255.0 172.16.1.255" \stdout{/etc/hostname.vether0}}
+\cmdr{echo "inet 192.168.1.20 255.255.255.0 192.168.1.255" \stdout{/etc/hostname.vether0}}
+\cmdr{}
+On the DSL router, we'll set the ip address to 192.168.1.21:
+\cmdr{echo "inet 192.168.1.21 255.255.255.0 192.168.1.255" \stdout{/etc/hostname.vether0}}
 \cmdr{}
 
+Next, we'll want to create the carp interface on the Cable router. This link is faster then our DSL line, so we'll want to make sure it's used in preference to the other network interfaces. This is determined by changing the 'advskew'. In general, the lower the number, the more preferred a host will be. So we will choose an advskew of 0, and 10 for our DSL line. 
+
+Since this is our first CARP interface, we'll use vhid 1. Remember that vhid's are network wide, so if you set up more then one carp interface, you need to make sure you don't use the same id numbers! We'll set the advbase to 1, which means that carp will announce it's existence every second. We will also add the carpdev option, which will specify which network interface we want carp to run on, which is vether0, our internal interface.
+\cmdr{echo "vhid 1 carpdev vether0 advbase 1 advskew 0 192.168.1.1 netmask 255.255.255.0" \stdout{/etc/hostname.carp0}}
+
+On the DSL router, we set it up almost the same way, except we will change advskew to 10
+\cmdr{echo "vhid 1 carpdev vether0 advbase 1 advskew 10 192.168.1.1 netmask 255.255.255.0" \stdout{/etc/hostname.carp0}}
 \end{document}
